syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rkchv/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(google.protobuf.Empty) returns (CreateResponse);
  rpc Connect(ConnectRequest) returns (stream Message);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateResponse {
  int64 id = 1;
}

message ConnectRequest {
  int64 chatId = 1;
}

message Message {
  int64 from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageRequest {
  int64 chatId = 1;
  string text = 2;
}

message DeleteRequest {
  int64 id = 1;
}
